# pilot-spacex

./: .env.example  .gitignore  .gitmodules  .impeccable.md  .planning  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT.md  README.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  .env.development  .env.example  .env.example.apikey  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Dockerfile  README.md  WAVE7-8_IMPLEMENTATION_SUMMARY.md  alembic.ini  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml  vercel.json
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_enable_pgvector.py  002_core_entities.py  003_project_entities.py  004_rls_policies.py  005_note_entities.py  006_issue_entities.py  009_integration_entities.py  010_ai_context_entity.py  011_performance_indexes.py  012_ai_configurations.py  013_add_module_lead_id.py  018_fix_ai_cost_records_schema.py  019_extend_annotation_type_enum.py  020_create_ai_conversational_tables.py  021_add_ai_messages_queue_columns.py  022_multi_context_sessions.py  022_workspace_invitations.py  022_workspace_onboarding.py  023_fix_invitation_rls_enum_case.py  024_enhanced_mcp_models.py  025_issue_links_rls_cross_workspace.py  026_add_role_based_skills.py  027_merge_heads.py  028_add_workspace_digests.py  029_add_digest_dismissals.py  030_add_notes_source_chat_session.py  031_homepage_rls_policies.py  032_add_digest_cron_job.py  033_fix_dismissals_nullable_and_constraints.py  034_fix_homepage_rls_policies.py  035_fix_digest_cron_security.py  036_fix_ai_sessions_rls_enum.py  036_fix_ai_sessions_rls_enum_case.py  037_add_task_management.py  038_add_work_intents.py  039_add_skill_executions.py  040_add_memory_engine.py  041_add_skill_approval_expiry.py  041_add_skill_approval_expiry_cron.py  042_add_note_versions.py  (+100 more)
backend/docs/: IMPLEMENTATION-CHECKLIST.md  T316-tool-schema-optimization.md  claude-sdk-architecture-review.md  database-schema-migration.md  e2e-test-results.md  message-storage-architecture.md  plan-claude-agent-sdk-refactor.md  plan-conversational-agent-v2.md  reconnection-architecture.md  sequence-diagrams-summary.md  simplified-queue-architecture.md  worker-implementation-guide.md  worker-implementation-with-session-wrapper.md
backend/scripts/: create_demo_auth_user.py  diagnose_sdk_issues.py  monitor_sdk_subprocess.py  profile_sdk_performance.py  seed_demo.py  sync_demo_user_id.py
backend/src/pilot_space/: __init__.py  config.py  container.py  dependencies.py  exceptions.py  main.py
backend/test-results/: SUMMARY.md  backend-test-analysis.md  duplicate-index-fix-report.md  fix-execution-report.md  fixture-cleanup-report.md
backend/tests/: __init__.py  conftest.py  factories.py
backend/tests/ai/: test_memory_recall_seam_smoke.py  test_permission_handler_with_service.py  test_tool_inventory_count.py
backend/tests/alembic/: test_migration_107.py
backend/tests/api/: conftest.py  test_memory_bulk.py  test_memory_detail.py  test_memory_list.py  test_memory_stats.py  test_related_issues.py  test_workspace_mcp_servers.py
backend/tests/audit/: __init__.py  conftest.py  test_ai_audit.py  test_audit_api.py  test_audit_export.py  test_audit_hook.py  test_audit_log_model.py  test_hook_audit.py  test_immutability.py  test_retention.py
backend/tests/contract/: __init__.py  test_api_contracts.py
backend/tests/contracts/: test_pm_block_types.py
backend/tests/e2e/: __init__.py  conftest.py  test_approval_workflow.py  test_chat_flow.py  test_chat_with_mocks.py  test_ghost_text_complete.py  test_mcp_tools.py  test_mock_scenarios.py  test_session_persistence.py  test_skill_invocation.py  test_subagent_delegation.py
backend/tests/factories/: __init__.py  intent_artifact_factory.py  work_intent_factory.py
backend/tests/fixtures/: __init__.py  anthropic_mock.py  knowledge_graph.py  mock_responses.py
backend/tests/infrastructure/: __init__.py  test_infrastructure.py  test_supabase_queue_sdk.py  test_workspace_tool_permissions_rls.py
backend/tests/integration/: __init__.py  conftest.py  test_agent_graph_integration.py  test_artifact_rls_nullable_project.py  test_auth.py  test_authcore_jwt_route_guard.py  test_data_migration.py  test_graph_full_pipeline.py  test_issues.py  test_kg_repo_pg.py  test_note_version_pipeline.py  test_notes.py  test_phase69_pgvector_rls_smoke.py  test_pm_block_pipeline.py  test_rls_marketplace.py  test_router_injection.py  test_sprint2_pipeline.py
backend/tests/load/: README.md  TASK_3_2_COMPLETION.md  __init__.py  test_ai_pipeline_performance.py  test_crdt_gate.py
backend/tests/manual/: test_sdlc_flow.py  test_sdlc_flow.sh
backend/tests/performance/: __init__.py  conftest.py  test_annotation_query_perf.py  test_latency_benchmarks.py  test_memory_search_perf.py  test_phase69_latency.py  test_version_perf.py
backend/tests/resilience/: __init__.py  test_approval_expiration.py  test_circuit_breaker.py  test_rate_limiter.py  test_session_manager.py
backend/tests/routers/: test_admin.py  test_auth_validate_key.py  test_health.py  test_implement_context_router.py  test_workspace_ai_settings.py  test_workspace_encryption.py  test_workspace_members_pagination.py  test_workspace_tasks.py  test_workspace_tasks_actions.py
backend/tests/security/: __init__.py  conftest.py  test_ai_tables_rls.py  test_api_key_audit.py  test_api_key_security.py  test_approval_bypass.py  test_hook_dd003_bypass.py  test_isolation.py  test_personal_page_rls.py  test_rate_limiting.py  test_rls_policies.py  test_tool_injection.py
backend/tests/services/: test_generate_plan_service.py  test_task_service.py  test_task_service_actions.py  test_validate_api_key_service.py
backend/tests/unit/: __init__.py  test_auth_router.py  test_container.py  test_encryption_kv.py  test_ensure_user_synced.py  (+17 more)
cli/: pilot.spec  pyproject.toml
cli/tests/: test_backup.py  test_config.py  test_login.py
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
(+3903 files in other folders)
