[project]
name = "pilot-space"
version = "0.1.0"
description = "AI-Augmented SDLC Platform with Note-First Workflow"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Tin Dang", email = "tin@pilotspace.dev" }
]
keywords = ["sdlc", "ai", "project-management", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    # Validation & Settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    # Cache & Queue
    "redis>=5.2.0",
    # Search
    "meilisearch>=0.31.0",
    # Supabase
    "supabase>=2.10.0",
    "gotrue>=2.10.0",
    "postgrest>=0.17.0",
    "storage3>=0.8.0",
    # AI Providers
    "anthropic>=0.40.0",
    "openai>=1.55.0",
    "google-generativeai>=0.8.0",
    # Claude Agent SDK
    "claude-agent-sdk>=0.1.0,<1.0",
    # Dependency Injection
    "dependency-injector>=4.43.0",
    # Logging & Monitoring
    "structlog>=24.4.0",
    # HTTP Client
    "httpx>=0.28.0",
    # Utilities
    "python-dateutil>=2.9.0",
    "orjson>=3.10.0",
    # Security
    "cryptography>=43.0.0",
    "psycopg2-binary>=2.9.11",
    # Markdown parsing
    "markdown-it-py>=3.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.28.0",
    "respx>=0.21.0",
    "factory-boy>=3.3.0",
    "faker>=33.0.0",

    # Linting & Formatting
    "ruff>=0.8.0",

    # Type Checking
    "pyright>=1.1.390",

    # Pre-commit
    "pre-commit>=4.0.0",

    # Debug
    "rich>=13.9.0",
    "ipython>=8.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pilot_space"]

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "infrastructure: marks tests as infrastructure tests (database, redis, meilisearch, auth, sandbox)",
    "api: marks tests as API endpoint tests",
    "e2e: marks tests as end-to-end tests",
    "performance: marks tests as performance benchmarks",
    "benchmark: marks tests as latency/throughput benchmarks (excluded from PR gate)",
    "contract: marks tests as contract tests (schema parity between backend and frontend)",
]

[tool.coverage.run]
source = ["src/pilot_space"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80
show_missing = true

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
]
