[project]
name = "pilot-cli"
version = "0.1.0"
description = "Pilot Space CLI - AI-augmented SDLC developer workflow"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "gitpython>=3.1.40",
    "jinja2>=3.1.0",
    "tomli-w>=1.0.0",
    "PyGithub>=2.1.0",
    "cryptography>=46.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "mypy>=1.9.0",
    "ruff>=0.4.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
pilot = "pilot_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pilot_cli"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/pilot_cli"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
