[package]
name = "pilot-space"
version = "0.1.0"
description = "Pilot Space Desktop"
authors = []
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "pilot_space_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
