[package]
name = "pilot-space"
version = "0.1.0"
description = "Pilot Space Desktop"
authors = []
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "pilot_space_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
git2 = { version = "0.20", features = ["vendored-libgit2"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
